# simple-queue-dispatcher

./: README.md  pyproject.toml  run.py
.github/workflows/: main.yml
dev/: spam notes.md  todo.md  user_scenarios.md
simple_queue_dispatcher/: app_config.py  data_model.py  logging_utils.py  main.py  mongo_utils.py
simple_queue_dispatcher/core/: __init__.py  app.py  app_config.py  sqd_app.py  telegram_bot.py
simple_queue_dispatcher/data/: data_model_mongo.py  data_model_pydantic.py  mongo_utils.py
simple_queue_dispatcher/data_model/: dm_mongo.py  dm_pydantic.py
simple_queue_dispatcher/utils/: cli.py  logging_utils.py
tests/: test_config.py  test_db_operations.py
