[tool.poetry]
name = "simple-queue-dispatcher"
version = "0.2.0"
description = ""
authors = ["Petr Lavrov <calmmage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
mongomock = "^4.1.2"
openai = "*"
black = "^23.9.1"
bot-base = { git = "https://github.com/calmmage/bot-base.git", branch = "frozen-simple-queue-dispatcher" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
